First implementation of JWT for authentication
update

update

update

Update frontend

update

update

update

update

update test

update

update tests

update

update

update

update

update

update

pmd

update

update
