# server/src/main/java/fr/myhome/server/model/User.java
@@ -10,7 +10,10 @@ import javax.persistence.EnumType;
 import javax.persistence.Enumerated;
 import javax.persistence.FetchType;
 import javax.persistence.Table;
+import javax.validation.constraints.Max;
+import javax.validation.constraints.NotNull;
 
+import fr.myhome.server.exception.TokenMatchException;
 import fr.myhome.server.model.enumerate.Role;
 import fr.myhome.server.model.mother.MotherPersistent;
 
@@ -26,18 +29,23 @@ import lombok.EqualsAndHashCode;
 public class User extends MotherPersistent {
 
     @Column(name = "USER_NAME", nullable = false, unique = true)
+    @NotNull
     private String username;
 
     @Column(name = "FIRST_NAME", nullable = false)
+    @NotNull
     private String firstName;
 
     @Column(name = "LAST_NAME", nullable = false)
+    @NotNull
     private String lastName;
 
     @Column(name = "EMAIL", nullable = false, unique = true)
+    @NotNull
     private String email;
 
     @Column(name = "PASSWORD", nullable = false)
+    @NotNull
     private String password;
 
     @ElementCollection(targetClass = Role.class, fetch = FetchType.EAGER)
@@ -47,14 +55,33 @@ public class User extends MotherPersistent {
     private List<Role> roles;
 
     @Column(name = "IS_LOCKED", nullable = false)
+    @NotNull
     private Boolean isLocked = false;
 
     @Column(name = "IS_ENABLED", nullable = false)
+    @NotNull
     private Boolean isEnabled = true;
+
+    @Column(name = "REFRESH_TOKEN", nullable = true, unique = true, length = 1024)
+    private String refreshToken;
 
     @Override
     public String toString() {
         return "User [id=" + this.id + ", userName=" + username + "]";
+    }
+
+    public void isRefreshTokenMath(final String refreshToken){
+        boolean value = false;
+
+        if(refreshToken != null && this.refreshToken != null){
+            if(refreshToken.equals(this.refreshToken)){
+                value = true;
+            }
+        }
+
+        if(!value){
+            throw new TokenMatchException();
+        }
     }
     
 }
