# server/src/main/java/fr/myhome/server/service/implementation/AuthenticationServiceImpl.java
@@ -1,12 +1,15 @@
 package fr.myhome.server.service.implementation;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
+import javax.servlet.http.Cookie;
 import javax.transaction.Transactional;
 
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.DisabledException;
@@ -17,27 +20,40 @@ import org.springframework.stereotype.Service;
 
 import fr.myhome.server.dto.UserDTOBuilder;
 import fr.myhome.server.exception.LoginException;
+import fr.myhome.server.exception.NoRefreshTokenCookie;
+import fr.myhome.server.exception.TokenMatchException;
 import fr.myhome.server.exception.UserEmailAlreadyExistException;
+import fr.myhome.server.exception.UserNotExistException;
 import fr.myhome.server.exception.UsernameAlreadyExistException;
 import fr.myhome.server.generated.model.LoginParameter;
+import fr.myhome.server.generated.model.TokenDTO;
 import fr.myhome.server.generated.model.UserDTO;
 import fr.myhome.server.generated.model.UserRegistrationParameter;
 import fr.myhome.server.model.User;
 import fr.myhome.server.model.enumerate.Role;
 import fr.myhome.server.repository.UserRepository;
 import fr.myhome.server.service.AuthenticationService;
+import fr.myhome.server.tools.CookieUtil;
+import fr.myhome.server.tools.JwtTokenUtil;
 
 @Service
 @Transactional
-public class AuthenticationServiceImpl implements AuthenticationService {
+public class AuthenticationServiceImpl extends MotherServiceImpl implements AuthenticationService {
 
+    private final JwtTokenUtil jwtTokenUtil;
+    private final CookieUtil cookieUtil;
     private final AuthenticationManager authenticationManager;
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
+
     private static final UserDTOBuilder USER_DTO_BUILDER = new UserDTOBuilder();
 
     @Autowired
-    public AuthenticationServiceImpl(final AuthenticationManager authenticationManager, final PasswordEncoder passwordEncoder, final UserRepository userRepository ){
+    public AuthenticationServiceImpl(final JwtTokenUtil jwtTokenUtil, final CookieUtil cookieUtil,
+     final AuthenticationManager authenticationManager, final PasswordEncoder passwordEncoder, final UserRepository userRepository){
+        super();
+        this.jwtTokenUtil = jwtTokenUtil;
+        this.cookieUtil = cookieUtil;
         this.authenticationManager = authenticationManager;
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
@@ -76,11 +92,13 @@ public class AuthenticationServiceImpl implements AuthenticationService {
 
         this.userRepository.save(user);
 
+        this.logger.info("Regisatrion of : {}", user.getUsername());
+
         return USER_DTO_BUILDER.transform(user);
     }
 
     @Override
-    public void login(final LoginParameter loginParameter) {
+    public HttpHeaders login(final LoginParameter loginParameter) {
         
         final UsernamePasswordAuthenticationToken loginCredentials =
                 new UsernamePasswordAuthenticationToken(
@@ -92,6 +110,62 @@ public class AuthenticationServiceImpl implements AuthenticationService {
                throw new LoginException(e);
         }
 
+        final TokenDTO accessTokenDTO = this.jwtTokenUtil.getAccessToken(loginParameter.getUsername());
+        final TokenDTO refreshTokenDTO = this.jwtTokenUtil.getRefreshToken(loginParameter.getUsername());
+
+        final HttpHeaders responseHeaders = new HttpHeaders();
+        responseHeaders.add(
+            HttpHeaders.SET_COOKIE, this.cookieUtil.createAccessTokenCookie(accessTokenDTO.getJwt(), accessTokenDTO.getDuration()).toString()
+            );
+        responseHeaders.add(
+            HttpHeaders.SET_COOKIE, this.cookieUtil.createRefreshTokenCookie(refreshTokenDTO.getJwt(), refreshTokenDTO.getDuration()).toString()
+            );
+
+        final User user = this.userRepository.findByUsername(loginParameter.getUsername()).get();
+
+        user.setRefreshToken(refreshTokenDTO.getJwt());
+
+        this.userRepository.save(user);
+
+        return responseHeaders;
     }
+
+    @Override
+    public HttpHeaders refreshAccessToken(Cookie[] cookies){
+
+        if(cookies == null) {
+            throw new NoRefreshTokenCookie();
+        }
+
+        final Cookie refreshTokenCookie = Arrays.stream(cookies)
+                                            .filter(cookie -> CookieUtil.REFRESH_TOKEN_COOKIE_NAME.equals(cookie.getName()))
+                                            .findFirst()
+                                            .orElseThrow(() -> new TokenMatchException());
+
+        final String refreshToken = refreshTokenCookie.getValue();
+
+        final String userName = this.jwtTokenUtil.getUserName(refreshToken);
+
+        final User user = this.userRepository.findByUsername(userName)
+            .orElseThrow(() -> new UserNotExistException(userName));
+
+        user.isRefreshTokenMath(refreshToken);
+
+        final TokenDTO refreshTokenDTO = this.jwtTokenUtil.getRefreshToken(userName);
+        final TokenDTO accessTokenDTO = this.jwtTokenUtil.getAccessToken(userName);
+
+        final HttpHeaders responseHeaders = new HttpHeaders();
+        responseHeaders.add(HttpHeaders.SET_COOKIE, cookieUtil.createRefreshTokenCookie(refreshTokenDTO.getJwt(), refreshTokenDTO.getDuration()).toString());
+        responseHeaders.add(HttpHeaders.SET_COOKIE, cookieUtil.createAccessTokenCookie(accessTokenDTO.getJwt(), accessTokenDTO.getDuration()).toString());
+
+        user.setRefreshToken(refreshTokenDTO.getJwt());
+
+        this.userRepository.save(user);
+
+        return responseHeaders;
+
+    }
+
+    
     
 }
